--- a/local.conf
+++ b/local.conf
@@ -14,7 +14,7 @@ INHERIT += "rm_work"
 RM_OLD_IMAGE = "1"
 
 # Download dir
-DL_DIR = ${BASEDIR}/downloads"
+DL_DIR = "${BASEDIR}/downloads"
 
 PRSERV_HOST = "localhost:0"
 
