--- a/bblayers.conf
+++ b/bblayers.conf
@@ -8,5 +8,6 @@ BBLAYERS = " \
 	${BASEDIR}/sources/poky/meta-poky \
 	${BASEDIR}/sources/meta-openembedded/meta-oe \
 	${BASEDIR}/sources/meta-raspberrypi \
+	${BASEDIR}/sources/meta-iot-cloud \
 	${BASEDIR}/sources/meta-regolith \
 "
